@@ -2,8 +2,9 @@ package serviceloader;
 
 import examples.QA;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.ServiceLoader;
+import java.util.stream.Collectors;
 
 public class Runner {
 
@@ -12,7 +13,7 @@ public class Runner {
 //        qa = new QA();
 
         ServiceLoader<QA> loader = ServiceLoader.load(QA.class);
-        var qaList = loader.stream().toList();
+        List<ServiceLoader.Provider<QA>> qaList = loader.stream().collect(Collectors.toList());
 
         qaList.forEach(e -> System.out.println(e.get().introduceYourSelf()));
     }
